<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Server_Host">Server Host:</string>
    <string name="Server_Port">Server Port:</string>
    <string name="Settings">Settings</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="First_Name">First Name:</string>
    <string name="Last_Name">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_fragment_message">Click on an event marker to see details.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>